# simple-rpc-rs

./: Cargo.toml  readme.md
examples/: simple-client.rs  simple-server.rs  speedtest.rs
src/: application.rs  lib.rs  packets.rs  types.rs
src/application/: events.rs  methods.rs  util.rs
