[package]
name = "simple-rpc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"]}
tokio = { version = "1.4", features = ["rt", "net", "io-util", "sync", "time", "macros", "rt-multi-thread"] }

[lib]
name = "simplerpcrs"
path = "src/lib.rs"
