[package]
name = "simple-rpc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.210", features = ["derive"]}
tokio = { version = "1.4", features = ["rt", "net", "io-util", "sync", "time", "macros", "rt-multi-thread"] }
rand = "0.8.5"
rmp-serde = "1.3.0"
anyhow = "1.0.91"

[lib]
name = "simplerpcrs"
path = "src/lib.rs"

[dev-dependencies]
env_logger = "0.11.5"
